Task-3: Meeting status

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -5,3 +5,7 @@ services:
 
     App\Tests\Behat\:
         resource: '../tests/Behat/*'
+
+    App\Repository\:
+        resource: '../src/Repository/*'
+        public: true
